--- a/笨鸟先飞/css/stupidBird.css
+++ b/笨鸟先飞/css/stupidBird.css
@@ -19,6 +19,7 @@ body {
   background-color: #666;
   color: #fff;
   font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
 }
 #header {
   position: absolute;
